# python-syncml

./: Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  knowledge.py  pysyncml.h  syncmlgen.py  syncmlmodule.c  syncmlmodule_customizations.py  syncmlmodule_generated.py
test/: common.py  run_tests.sh  test_location.py  test_manager_new.py  test_manager_receive.py  test_manager_receive_class.py  test_manager_receive_session.py  test_manager_run.py  test_session_new.py
